media/css/firefox/includes/_sticky-promo.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';
@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/components/sticky-promo';

// Hide promo by default for mobile devices (<$mq-md)
.mzp-c-sticky-promo {
    display: none;
}

// Show non-Fx users a promo to download Fx
.promo-firefox {
    .is-firefox & {
        display: none;
    }
}

// Show Fx users a promo to try other products
.promo-products {
    display: none;
    .is-firefox & {
        display: block;
        .mzp-c-sticky-promo-title {
            background: none;
            padding: 0;
            margin-bottom: 0;
            text-align: center;
        }
    }
}

.mzp-c-sticky-promo .mzp-c-button-download-container {
    width: 100%;
}

//* -------------------------------------------------------------------------- */
// Promo Products List Styles

.promo-products-list {
    list-style: none;
    margin: $spacing-xl 0 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-top: $border-radius-xs solid rgba(255,255,255,0.5);
    padding-top: $spacing-xl;
}

.promo-products-link {
    display: flex;
    text-decoration: none !important; /* stylelint-disable-line declaration-no-important */
    margin-bottom: $spacing-md;
    align-items: center;
    font-weight: bold;
    img {
        width: $spacing-xl;
        height: 100%;
        display: block;
        margin-inline-end: $spacing-md;
    }
}

@media #{$mq-md} {
    .mzp-c-sticky-promo {
        display: block;
    }
}

